# Kuiper-Race

./: CMakeLists.txt
blend/: arrow.blend  asteroid.blend  planet.blend  ship.blend
include/: Asteroid.h  Audio.h  InputHandler.h  Level.h  Segment.h  Spaceship.h  utility.h
include/graphics/: Rectangle.h  Registry.h
include/maths/: TransformPipeline.h
models/: Makefile
scripts/: compile_obj.py
shaders/: arrow.frag  arrow.vert  atmosphere.frag  checkpoint.frag  checkpoint.vert  cubemap.frag  cubemap.vert  default.frag  overlay.frag  overlay.vert  planet.frag  planet.vert  postprocess.frag  postprocess.vert  screen.frag  ship.vert  test.frag  test.vert
src/: Asteroid.cpp  Audio.cpp  InputHandler.cpp  Level.cpp  Segment.cpp  Spaceship.cpp  main.cpp  utility.cpp  wavloader.c
src/graphics/: Camera.cpp  PngLoader.cpp  Rectangle.cpp  Registry.cpp
src/graphics/opengl/: Buffer.cpp  ShaderProgram.cpp
src/maths/: TransformPipeline.cpp
